<resources>
    <string name="app_name">RepairOrders</string>
    <string name="app_name_header">RepairOrdersF25</string>
    <string name="name_label"> </string>

    <string-array name="order_types">
        <item>Repair</item>
        <item>Maintenance</item>
        <item>Installation</item>
        <item>Inspection</item>
        <item>Other</item>
    </string-array>


    <string name="order_type">Order Type</string>
    <string name="technician">Technician</string>
    <string name="inspection">Inspection</string>
    <string name="paint">Paint</string>
    <string name="parts">Parts</string>
    <string name="labor">Labor</string>

    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>

    <string name="button_text">Submit</string>

    <string name="name_sample">Name of person (e.g., Sloane)</string>

    <string name="dollarempty">$0.0</string>

    <string name="order_type_prompt">Select Order Type</string>


</resources>